ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/SwitchStatements/parserErrorRecovery_SwitchStatement1/input.ts.stderr
error: Expected an expression
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/SwitchStatements/parserErrorRecovery_SwitchStatement1/input.ts:4:5
  |
4 |     case 2:
  |     ^^^^

error: Expected an expression
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/SwitchStatements/parserErrorRecovery_SwitchStatement1/input.ts:6:5
  |
6 |     default:
  |     ^^^^^^^

